--- a/数据挖掘学习笔记.md
+++ b/数据挖掘学习笔记.md
@@ -1356,3 +1356,307 @@ plt.show()
 
 ![image-20210907224902638](D:\Typora\Data\数据挖掘\pic\image-20210907224902638.png)
 
+### 文件的读取与存储
+
+![image-20210908111158160](D:\Typora\Data\数据挖掘\pic\image-20210908111158160.png)
+
+#### CSV
+
+```python
+import numpy as np
+import pandas as pd
+
+data = pd.read_csv("../file/stock_day.csv", usecols=['open', 'high', 'colse'])
+# 删除一些列，让数据更简单些
+# data = data.drop(["ma5", "ma10", "ma20", "v_ma5", "v_ma10", "v_ma20"], axis=1) # 按列
+```
+
+![image-20210908111947186](D:\Typora\Data\数据挖掘\pic\image-20210908111947186.png)
+
+```python
+# 如果表中没有索引，会将第一行作为字段
+
+data = pd.read_csv("../file/stock_day2.csv", names=[字段])
+```
+
+- 存储csv
+
+```python
+# 保存‘open’列的数据
+
+data[:10].to_csv(path, column=['要保存的列'], index=False, mode="a", head=False) # 不要行索引,追加模式,不要追加头所有
+```
+
+#### HDF5
+
+hdf5存储3维数据的文件
+
+key1 dataframe1
+
+key2 dataframe2
+
+....
+
+```python
+pd.read_hdf('path', key='**') # 当有一个key时，可以不指定key
+
+df.to_hdf('path1',key='**1')
+df.to_hdf('path1',key='**2')
+```
+
+HDF5在存储的是支持压缩，使用的方式是blosc，这个是速度最快的也是pandas默认支持的
+
+使用压缩可以提高磁盘利用率，节省空间
+
+HDF5还是跨平台的，可以轻松迁移到hadoop上面
+
+#### JSON
+
+Json是一种数据交换格式，前后端交互经常用到，也会在存储的时候选择这种格式，所以我们需要知道Pandas如何进行读取和存储Json格式。
+
+```python
+pd.read_json('path', orient='records', lines=True) # 读取格式，是否按行读取
+
+data.to_json('path',orient='records', lines=True)
+```
+
+## Pandas高级处理
+
+### 缺失值处理
+
+- 如何进行缺失值nan处理：
+    - 删除含有缺失值的样本
+    -  替换/插补
+- 如何处理nan：
+    - 判断数据中是否存在nan：``pd.isnull(df) / pd.notnull(df)``
+    - 删除含有缺失值的样本``df.dropna(axis='rows', inplace=True/False)`` 默认是按行删除。如果是True就就地删除，如果是False不会修改df，而是返回一个删除后的df，默认是False
+    - 替换插补``df.fillna(value, inplace=True/False)``
+- 如果缺失值不是nan而是？号等其他标记：
+    - 替换``df.replace(to_replace=, value=np.nan)``to_replace:替换前的值，value替换后的值
+    - 把其他符合替换成nan
+
+```python
+'''
+是否存在nan类型的缺失值
+'''
+import pandas as pd
+import numpy as np
+
+# 读取数据
+movie = pd.read_csv("../file/IMDB-Movie-Data.csv")
+
+# 判断是否存在缺失值
+nan = pd.isnull(movie).any()
+
+# 缺失值处理
+# 删除含有缺失值的样本
+# movie.dropna(inplace=True)
+# 替换
+movie["Revenue (Millions)"].fillna(movie["Revenue (Millions)"].mean(), inplace=True)
+movie["Metascore"].fillna(movie["Metascore"].mean(), inplace=True)
+
+nan2 = pd.isnull(movie).any()
+
+print(nan)
+print(nan2)
+print(movie)
+'''
+Rank                  False
+Title                 False
+Genre                 False
+Description           False
+Director              False
+Actors                False
+Year                  False
+Runtime (Minutes)     False
+Rating                False
+Votes                 False
+Revenue (Millions)     True
+Metascore              True
+dtype: bool
+Rank                  False
+Title                 False
+Genre                 False
+Description           False
+Director              False
+Actors                False
+Year                  False
+Runtime (Minutes)     False
+Rating                False
+Votes                 False
+Revenue (Millions)    False
+Metascore             False
+dtype: bool
+     Rank                    Title  ... Revenue (Millions) Metascore
+0       1  Guardians of the Galaxy  ...         333.130000      76.0
+1       2               Prometheus  ...         126.460000      65.0
+2       3                    Split  ...         138.120000      62.0
+3       4                     Sing  ...         270.320000      59.0
+4       5            Suicide Squad  ...         325.020000      40.0
+..    ...                      ...  ...                ...       ...
+995   996     Secret in Their Eyes  ...          82.956376      45.0
+996   997          Hostel: Part II  ...          17.540000      46.0
+997   998   Step Up 2: The Streets  ...          58.010000      50.0
+998   999             Search Party  ...          82.956376      22.0
+999  1000               Nine Lives  ...          19.640000      11.0
+'''
+```
+
+```python
+'''
+是否存在不是nan类型的缺失值
+'''
+import pandas as pd
+import numpy as np
+
+# 读取数据
+data = pd.read_csv("../file/IMDB-Movie-Data.csv")
+
+# 替换 ？ -> np.nan
+data_new = data.replace(to_replace="?", value=np.nan)
+
+# 按照nan的方式进行处理
+# 删除缺失值
+data_new.dropna(replace=True)
+
+print(data_new)
+```
+
+
+
+### 数据离散化
+
+- 什么是数据离散化？
+
+one-hot编码 / 哑变量
+
+![image-20210909192823604](D:\Typora\Data\数据挖掘\pic\image-20210909192823604.png)
+
+- 为什么要数据的离散化？
+    - 连续属性离散化的目的是为了简化数据结构，数据离散化技术可以用来减少给定连续属性值的个数，离散化方法经常作为数据挖掘的工具
+- 如何实现数据的离散化？
+    - 分组
+        - 自动分组 ``sr = pd.qcut(data, bins)``
+        - 自定义分组``sr = pd.cut(data, [])``
+    - 将分组好的结果转换成哑变量
+        - ``pd.get_dummies(sr, prefix='前缀', )``
+
+```python
+import numpy as np
+import pandas as pd
+
+# 准备数据
+data = pd.Series([165, 174, 160, 180, 159, 163, 192, 184], index=['No1:165','No2:174','No3:160','No4:180','No5:159','No6:163','No7:192','No8:184'])
+# 分组
+# 自动分组
+# sr = pd.qcut(data, 3)
+# 自定义分组
+sr = pd.cut(data, [150, 165, 180, 195])
+print(sr.value_counts())
+print("------")
+# 转换成哑变量
+data2 = pd.get_dummies(sr, prefix="身高")
+
+print(data2)
+
+'''
+(150, 165]    4
+(180, 195]    2
+(165, 180]    2
+dtype: int64
+------
+         身高_(150, 165]  身高_(165, 180]  身高_(180, 195]
+No1:165              1              0              0
+No2:174              0              1              0
+No3:160              1              0              0
+No4:180              0              1              0
+No5:159              1              0              0
+No6:163              1              0              0
+No7:192              0              0              1
+No8:184              0              0              1
+
+Process finished with exit code 0
+'''
+```
+
+
+
+### 合并
+
+- 按方向拼接``pd.concat([data1, data2], axis=0)``默认竖直拼接（行索引一样水平拼接， 列索引一样竖直拼接）
+- 按索引拼接``pd.merge(left, right, how="inner", on=[索引])``
+    - ![image-20210909203910918](D:\Typora\Data\数据挖掘\pic\image-20210909203910918.png)
+    - ![image-20210909203857025](D:\Typora\Data\数据挖掘\pic\image-20210909203857025.png)
+    - ![image-20210909204134598](D:\Typora\Data\数据挖掘\pic\image-20210909204134598.png)
+
+### 交叉表和透视表
+
+- 交叉表：交叉表用于计算一列数据对于另一列数据的分组个数（寻找两个列之间的关系）
+    - ``pd.crosstab(value1, value2)``
+
+ 
+
+```python
+
+import numpy as np
+import pandas as pd
+import matplotlib.pyplot as plt
+
+# 星期数据以及涨跌幅是好是坏数据
+stock = pd.read_csv("../file/stock_day.csv")
+# 准备星期数据列
+date = pd.to_datetime(stock.index)
+stock["week"] = date.weekday
+# 准备涨跌幅数据列
+stock["pona"] = np.where(stock["p_change"] > 0, 1, 0)
+
+# 调用交叉表
+cross = pd.crosstab(stock["week"], stock["pona"])
+
+cross_sum = cross.div(cross.sum(axis=1), axis = 0)
+
+cross_sum.plot(kind="bar", stacked=True)
+
+
+plt.show()
+print(cross_sum)
+
+'''
+pona         0         1
+week                    
+0     0.504000  0.496000
+1     0.419847  0.580153
+2     0.462121  0.537879
+3     0.492188  0.507812
+4     0.464567  0.535433
+'''
+```
+
+![image-20210909211150545](D:\Typora\Data\数据挖掘\pic\image-20210909211150545.png)
+
+- 透视表``data.prvot_table([], index=[])``
+
+### 分组与聚合
+
+- 分组
+
+```python
+import pandas as pd
+import numpy as np
+
+col = pd.DataFrame({'color': ['white','red','green','red','green'], 'object': ['pen','pencil','pencil','ashtray','pen'],'price1':[5.56,4.20,1.30,0.56,2.75],'price2':[4.75,4.12,1.60,0.75,3.15]})
+
+# 进行分组，对颜色分组，price进行聚合
+# 用dataframe进行分组
+# col = col.groupby(by="color")["price1"].max()
+col = col["price1"].groupby(col["color"]).max()
+
+print(col)
+'''
+color
+green    2.75
+red      4.20
+white    5.56
+Name: price1, dtype: float64
+'''
+```
