--- a/数据挖掘学习笔记.md
+++ b/数据挖掘学习笔记.md
@@ -30,9 +30,9 @@ jupyter notebooki
 
 新建notebook的文档格式是.ipynb
 
-![image-20210905100022783](D:\Typora\Data\数据挖掘\pic\image-20210905100022783.png)
+![image-20210905100022783](.\pic\image-20210905100022783.png)
 
-![image-20210905095722397](D:\Typora\Data\数据挖掘\pic\image-20210905095722397.png)
+![image-20210905095722397](.\pic\image-20210905095722397.png)
 
 ### cell操作
 
@@ -93,7 +93,7 @@ plt.plot([1, 0, 9], [4, 5, 6])
 plt.show()
 ```
 
-![image-20210905110614554](D:\Typora\Data\数据挖掘\pic\image-20210905110614554.png)
+![image-20210905110614554](.\pic\image-20210905110614554.png)
 
 ### Matplotlib三层结构	
 
@@ -132,7 +132,7 @@ plt.plot([1, 2, 3, 4, 5, 6, 7], [17, 17, 18, 14, 11, 11, 13])
 plt.show()
 ```
 
-![image-20210905113654039](D:\Typora\Data\数据挖掘\pic\image-20210905113654039.png)
+![image-20210905113654039](.\pic\image-20210905113654039.png)
 
 #### 设置画布属性与图片保存
 
@@ -159,7 +159,7 @@ plt.savefig("test.png")
 plt.show() # 会释放figure资源
 ```
 
-![test](D:\Typora\Data\数据挖掘\pic\test.png)
+![test](.\pic\test.png)
 
 #### 完善原始折线图(辅助显示层)
 
@@ -176,7 +176,7 @@ plt.plot(x, y_shanghai)
 plt.show()
 ```
 
-![image-20210905115612134](D:\Typora\Data\数据挖掘\pic\image-20210905115612134.png)
+![image-20210905115612134](.\pic\image-20210905115612134.png)
 
 ##### 中文问题解决
 
@@ -217,7 +217,7 @@ plt.yticks(range(0, 40, 5))
 plt.show()
 ```
 
-![image-20210905160255509](D:\Typora\Data\数据挖掘\pic\image-20210905160255509.png)
+![image-20210905160255509](.\pic\image-20210905160255509.png)
 
 ##### 添加网格
 
@@ -225,7 +225,7 @@ plt.show()
 plt.grid(True, linestyle='--', alpha=0.5) # 默认是true, 网格风格， 透明度
 ```
 
-![image-20210905161514297](D:\Typora\Data\数据挖掘\pic\image-20210905161514297.png)
+![image-20210905161514297](.\pic\image-20210905161514297.png)
 
 ##### 添加描述信息
 
@@ -266,7 +266,7 @@ plt.title("中午11点0分到12点之间的温度变化图示")
 plt.show()
 ```
 
-![image-20210905161819192](D:\Typora\Data\数据挖掘\pic\image-20210905161819192.png)
+![image-20210905161819192](.\pic\image-20210905161819192.png)
 
 #### 完善原始折线图(图像层)
 
@@ -309,7 +309,7 @@ plt.legend(loc=0) # 修改显示的位置
 plt.show()
 ```
 
-![image-20210905163015887](D:\Typora\Data\数据挖掘\pic\image-20210905163015887.png)
+![image-20210905163015887](.\pic\image-20210905163015887.png)
 
 ##### 多个坐标系显示-plt.subplots(面向对象的画图方法)
 
@@ -366,7 +366,7 @@ axes[1].set_title("北京中午11点0分到12点之间的温度变化图示")
 plt.show()
 ```
 
-![image-20210905170009965](D:\Typora\Data\数据挖掘\pic\image-20210905170009965.png)
+![image-20210905170009965](.\pic\image-20210905170009965.png)
 
 #### 其他图像
 
@@ -385,7 +385,7 @@ plt.grid()
 plt.show()
 ```
 
-![image-20210905170744698](D:\Typora\Data\数据挖掘\pic\image-20210905170744698.png)
+![image-20210905170744698](.\pic\image-20210905170744698.png)
 
 ```python
 import matplotlib.pyplot as plt
@@ -402,7 +402,7 @@ plt.grid()
 plt.show()
 ```
 
-![image-20210905171218283](D:\Typora\Data\数据挖掘\pic\image-20210905171218283.png)
+![image-20210905171218283](.\pic\image-20210905171218283.png)
 
 ### 散点图
 
@@ -419,7 +419,7 @@ plt.scatter(x, y)
 plt.show()
 ```
 
-![image-20210905172340123](D:\Typora\Data\数据挖掘\pic\image-20210905172340123.png)
+![image-20210905172340123](.\pic\image-20210905172340123.png)
 
 ### 柱状图
 
@@ -451,7 +451,7 @@ plt.grid(linestyle="--", alpha=0.5)
 plt.show()
 ```
 
-![image-20210905174649434](D:\Typora\Data\数据挖掘\pic\image-20210905174649434.png)
+![image-20210905174649434](.\pic\image-20210905174649434.png)
 
 ```python
 import matplotlib.pyplot as plt
@@ -474,7 +474,7 @@ plt.legend()
 plt.show()
 ```
 
-![image-20210905191901060](D:\Typora\Data\数据挖掘\pic\image-20210905191901060.png)
+![image-20210905191901060](.\pic\image-20210905191901060.png)
 
 ### 直方图
 
@@ -503,7 +503,7 @@ plt.title("******")
 plt.show()
 ```
 
-![image-20210905201137397](D:\Typora\Data\数据挖掘\pic\image-20210905201137397.png)
+![image-20210905201137397](.\pic\image-20210905201137397.png)
 
 ### 饼图
 
@@ -529,7 +529,7 @@ plt.legend()
 plt.show()
 ```
 
-![image-20210905202201244](D:\Typora\Data\数据挖掘\pic\image-20210905202201244.png)
+![image-20210905202201244](.\pic\image-20210905202201244.png)
 
 
 
@@ -607,7 +607,7 @@ c.shape # (2, 2, 3)
 
 ### ndarray类型
 
-![image-20210906151555036](D:\Typora\Data\数据挖掘\pic\image-20210906151555036.png)
+![image-20210906151555036](.\pic\image-20210906151555036.png)
 
 ```python
 import numpy as np
@@ -682,13 +682,13 @@ plt.show()
 
 ```
 
-![image-20210906181351166](D:\Typora\Data\数据挖掘\pic\image-20210906181351166.png)
+![image-20210906181351166](.\pic\image-20210906181351166.png)
 
 ##### 正态分布
 
 正态分布是一种概率分布。正态分布是具有两个参数∪和⊕的连续型随机变量的分布,第一个参数∪是服从正太分布的随机变量的均值,第二个参数⊕是此随机变量的标准差 ,所以正态分布记作N(∪,⊕)
 
-![image-20210906182431339](D:\Typora\Data\数据挖掘\pic\image-20210906182431339.png)
+![image-20210906182431339](.\pic\image-20210906182431339.png)
 
  
 
@@ -710,7 +710,7 @@ plt.show()
 
 ```
 
-![image-20210906183246707](D:\Typora\Data\数据挖掘\pic\image-20210906183246707.png)
+![image-20210906183246707](.\pic\image-20210906183246707.png)
 
 ### 基本操作
 
@@ -943,7 +943,7 @@ ndarray1 + ndarray2
 - **维度相等**
 - **shape（其中相对应的一个地方为1）**
 
- ![image-20210906211323832](D:\Typora\Data\数据挖掘\pic\image-20210906211323832.png)
+ ![image-20210906211323832](.\pic\image-20210906211323832.png)
 
 ##### 矩阵运算
 
@@ -1354,11 +1354,11 @@ data.plot("p_change", "turnover", "scatter")
 plt.show()
 ```
 
-![image-20210907224902638](D:\Typora\Data\数据挖掘\pic\image-20210907224902638.png)
+![image-20210907224902638](.\pic\image-20210907224902638.png)
 
 ### 文件的读取与存储
 
-![image-20210908111158160](D:\Typora\Data\数据挖掘\pic\image-20210908111158160.png)
+![image-20210908111158160](.\pic\image-20210908111158160.png)
 
 #### CSV
 
@@ -1371,7 +1371,7 @@ data = pd.read_csv("../file/stock_day.csv", usecols=['open', 'high', 'colse'])
 # data = data.drop(["ma5", "ma10", "ma20", "v_ma5", "v_ma10", "v_ma20"], axis=1) # 按列
 ```
 
-![image-20210908111947186](D:\Typora\Data\数据挖掘\pic\image-20210908111947186.png)
+![image-20210908111947186](.\pic\image-20210908111947186.png)
 
 ```python
 # 如果表中没有索引，会将第一行作为字段
@@ -1530,7 +1530,7 @@ print(data_new)
 
 one-hot编码 / 哑变量
 
-![image-20210909192823604](D:\Typora\Data\数据挖掘\pic\image-20210909192823604.png)
+![image-20210909192823604](.\pic\image-20210909192823604.png)
 
 - 为什么要数据的离散化？
     - 连续属性离散化的目的是为了简化数据结构，数据离散化技术可以用来减少给定连续属性值的个数，离散化方法经常作为数据挖掘的工具
@@ -1585,9 +1585,9 @@ Process finished with exit code 0
 
 - 按方向拼接``pd.concat([data1, data2], axis=0)``默认竖直拼接（行索引一样水平拼接， 列索引一样竖直拼接）
 - 按索引拼接``pd.merge(left, right, how="inner", on=[索引])``
-    - ![image-20210909203910918](D:\Typora\Data\数据挖掘\pic\image-20210909203910918.png)
-    - ![image-20210909203857025](D:\Typora\Data\数据挖掘\pic\image-20210909203857025.png)
-    - ![image-20210909204134598](D:\Typora\Data\数据挖掘\pic\image-20210909204134598.png)
+    - ![image-20210909203910918](.\pic\image-20210909203910918.png)
+    - ![image-20210909203857025](.\pic\image-20210909203857025.png)
+    - ![image-20210909204134598](.\pic\image-20210909204134598.png)
 
 ### 交叉表和透视表
 
@@ -1632,7 +1632,7 @@ week
 '''
 ```
 
-![image-20210909211150545](D:\Typora\Data\数据挖掘\pic\image-20210909211150545.png)
+![image-20210909211150545](.\pic\image-20210909211150545.png)
 
 - 透视表``data.prvot_table([], index=[])``
 
