--- a/数据挖掘学习笔记.md
+++ b/数据挖掘学习笔记.md
@@ -3552,11 +3552,140 @@ pca_f.explained_variance_ratio_ # array([0.92461872, 0.05306648])
 
 
 
-**pca重要属性**
+**pca重要属性components_**
 
 ```python
-PCA(2).fit(X).components_ # 降维过后的新特征空间V(k, n)
+PCA(2).fit(X).components_ # 降维过后的新特征空间V(k, n) k是需要的特征数，n是原始的特征数
 ```
 
 ![image-20210920223001733](.\pic\image-20210920223001733.png)
+
+```python
+from sklearn.datasets import fetch_lfw_people
+from sklearn.decomposition import PCA
+import matplotlib.pyplot as plt
+import numpy as np
+
+faces = fetch_lfw_people(min_faces_per_person=60) # 实例化
+
+faces.data.shape # (1348, 2914)
+# 行是样本
+# 列是样本相关的所有特征
+
+faces.images.shape  # (1348, 62, 47)
+# 1348 是矩阵中图像的个数
+# 62 是每个图像的特征矩阵的行
+# 47 是每个图像的特征矩阵的列
+
+#创建画布和子图对象
+fig, axes = plt.subplots(3, 8, figsize=(8,4), subplot_kw = {"xticks":[],"yticks":[]} )#不要显示坐标轴
+for i, ax in enumerate(axes.flat):
+    ax.imshow(faces.images[i,:,:], cmap="gray") #选择色彩的模式 
+```
+
+![image-20210921104054250](.\pic\image-20210921104054250.png)
+
+```python
+#原本有2900维，我们现在来降到150维
+pca = PCA(150).fit(X) 
+V = pca.components_ # 用来映射的新向量特征空间
+V.shape #(150, 2914)
+
+fig, axes = plt.subplots(3,8,figsize=(8,4),subplot_kw = {"xticks":[],"yticks":[]})
+for i, ax in enumerate(axes.flat):
+    ax.imshow(V[i,:].reshape(62,47),cmap="gray")
+```
+
+![image-20210921104149751](.\pic\image-20210921104149751.png)
+
+
+
+**重要接口inverse_transform**
+
+```python
+from sklearn.datasets import fetch_lfw_people
+from sklearn.decomposition import PCA
+import matplotlib.pyplot as plt
+import numpy as np
+
+faces = fetch_lfw_people(min_faces_per_person=60)
+X = faces.data
+
+# 降维
+pca = PCA(150)
+X_dr = pca.fit_transform(X)
+X_dr.shape # (1348, 150)
+
+# 逆转
+X_inverse = pca.inverse_transform(X_dr) # 逆转
+X_inverse.shape # (1348, 2914)
+
+# 画图
+fig, ax = plt.subplots(2,10,figsize=(10,2.5),subplot_kw={"xticks":[],"yticks":[]} )
+for i in range(10):
+    ax[0,i].imshow(faces.images[i,:,:],cmap="binary_r")
+    ax[1,i].imshow(X_inverse[i].reshape(62,47),cmap="binary_r")
+    
+```
+
+![image-20210921105145889](.\pic\image-20210921105145889.png)
+
+可以明显看出，这两组数据可视化后，由降维后再通过inverse_transform转换回原维度的数据画出的图像和原数据画的图像大致相似，但原数据的图像明显更加清晰。这说明，inverse_transform并没有实现数据的完全逆转。这是因为，在降维的时候，部分信息已经被舍弃了，X_dr中往往不会包含原数据100%的信息，所以在逆转的时候，即便维度升高，原数据中已经被舍弃的信息也不可能再回来了。所以，**降维不是完全可逆的**。
+
+
+
+**用PCA做噪音过滤**
+
+降维的目的之一就是希望抛弃掉对模型带来负面影响的特征，而我们相信，带有效信息的特征的方差应该是远大于噪音的，所以相比噪音，有效的特征所带的信息应该不会在PCA过程中被大量抛弃。inverse_transform能够在不恢复原始数据的情况下，将降维后的数据返回到原本的高维空间，即是说能够实现”保证维度，但去掉方差很小特征所带的信息“。利用inverse_transform的这个性质，我们能够实现噪音过滤。
+
+```python
+from sklearn.datasets import load_digits
+from sklearn.decomposition import PCA
+import matplotlib.pyplot as plt
+import numpy as np
+
+digits = load_digits()
+digits.data.shape # (1797, 64)
+
+digits.target # array([0, 1, 2, ..., 8, 9, 8])
+set(digits.target.tolist()) # {0, 1, 2, 3, 4, 5, 6, 7, 8, 9}
+digits.data
+```
+
+![image-20210921154139561](.\pic\image-20210921154139561.png)
+
+```python
+digits.images.shape # (1797, 8, 8)
+
+def plot_digits(data):
+    fig, axes = plt.subplots(4,10,figsize=(10,4),subplot_kw = {"xticks":[],"yticks":[]})
+    for i, ax in enumerate(axes.flat):
+        ax.imshow(data[i].reshape(8,8),cmap="binary")
+        
+plot_digits(digits.data)
+```
+
+![image-20210921155123610](.\pic\image-20210921155123610.png)
+
+```python
+np.random.RandomState(42)
+#在指定的数据集中，随机抽取服从正态分布的数据
+#两个参数，分别是指定的数据集，和抽取出来的正太分布的方差
+noisy = np.random.normal(digits.data,2) # 方差越大，随机抽取的数据就越乱
+plot_digits(noisy)
+```
+
+![image-20210921155532839](.\pic\image-20210921155532839.png)
+
+```python
+pca = PCA(0.5).fit(noisy)
+X_dr = pca.transform(noisy)
+X_dr.shape # (1797, 6)
+
+without_noise = pca.inverse_transform(X_dr)
+plot_digits(without_noise)
+
+```
+
+![image-20210921155615655](.\pic\image-20210921155615655.png)
 
